# d3d11-rs

./: Cargo.toml  README.md
.zed/: settings.json
d3d11-sys/: Cargo.toml
d3d11-sys/src/: Direct3D.rs  Direct3D11.rs  Foundation.rs  Security.rs  dxvk.rs  lib.rs
d3d11-sys/src/Direct3D/: Fxc.rs
d3d11-sys/src/Dxgi/: Common.rs  mod.rs
d3d11-sys/src/core_supplemental/: link.rs  literals.rs  mod.rs
examples/: headless.rs  triangle.rs
examples/shaders/: triangle.hlsl  triangle_ps.cso  triangle_vs.cso
src/: blend_state.rs  buffer.rs  common.rs  device.rs  device_child.rs  dsv.rs  error.rs  input_layout.rs  lib.rs  query.rs  rasterizer.rs  resource.rs  rtv.rs  sampler.rs  shader.rs  srv.rs  texture.rs  uav.rs  util.rs
src/context/: annotation.rs  draw.rs  input_assembler.rs  mod.rs  output_merger.rs  query.rs  rasterizer.rs  shader.rs
src/context/fxc/: mod.rs  native.rs
src/dxgi/: format.rs  mod.rs  swapchain.rs
src/fxc/: mod.rs  wine.rs
