[package]
name = "d3d11"
version = "0.0.0"
edition = "2021"

[dependencies]
bitflags = "2.6.0"
bon = "3.3.1"
paste = "1.0.15"
static_assertions = "1.1.0"
thiserror = "2.0"
windows = { version = "0.58.0", features = [
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D_Fxc",
] }

[dev-dependencies]
anyhow = "1.0"
glfw = "0.59.0"
