[package]
name = "d3d11"
version = "0.2.0"
edition = "2021"
authors = ["cohaereo <cohae@cohae.dev>"]
description = "Safe(r) bindings to the D3D11 API"
homepage = "https://github.com/cohaereo/d3d11-rs"
repository = "https://github.com/cohaereo/d3d11-rs"
license = "MIT/Apache-2.0"
readme = "README.md"
categories = [
    "api-bindings",
    "graphics",
    "game-development",
    "hardware-support",
]
keywords = ["d3d", "directx", "microsoft", "windows", "winapi"]
include = ["**/*.rs", "Cargo.toml"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [
    "aarch64-pc-windows-msvc",
    "i686-pc-windows-msvc",
    "x86_64-pc-windows-msvc",
]

[dependencies]
d3d11-ffi = { path = "./d3d11-sys", version = "0.2.0" }

bitflags = "2.6.0"
bon = "3.3.1"
paste = "1.0.15"
profiling = { version = "1", optional = true }
static_assertions = "1.1.0"
thiserror = "2.0"

[dev-dependencies]
anyhow = "1"
glfw = "0.59.0"

[features]
profiling = ["dep:profiling"]
