[package]
name = "d3d11"
version = "0.2.0"
edition = "2021"
authors = ["cohaereo <cohae@cohae.dev>"]
description = "Safe(r) bindings to the D3D11 API"
homepage = "https://github.com/cohaereo/d3d11-rs"
repository = "https://github.com/cohaereo/d3d11-rs"
license = "MIT/Apache-2.0"
readme = "README.md"
categories = [
    "api-bindings",
    "graphics",
    "game-development",
    "hardware-support",
]
keywords = ["d3d", "directx", "microsoft", "windows", "winapi"]
include = ["**/*.rs", "Cargo.toml"]

[lib]
name = "d3d11"
path = "src/lib.rs"

[[bin]]
name = "fxc-server"
path = "src/bin/fxc-server.rs"
required-features = ["fxc"]


[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [
    "aarch64-pc-windows-msvc",
    "i686-pc-windows-msvc",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu"
]

[dependencies]
d3d11-ffi = { path = "./d3d11-sys", version = "0.2.0" }

bitflags = "2.6.0"
bon = "3.3.1"
paste = "1.0.15"
profiling = { version = "1", optional = true }
static_assertions = "1.1.0"
thiserror = "2.0"

sdl2 = { version = "0.38", features = ["raw-window-handle"], optional = true }
sdl3 = { version = "0.16", features = ["raw-window-handle"], optional = true }
byteorder = "1.5.0"
bincode = { version = "2.0.1", default-features = false, features = ["alloc", "derive", "std"] }
smallvec = "1.15.1"

[dev-dependencies]
anyhow = "1"
image = { version = "0.25", default-features = false, features = ["bmp"] }
# glfw = { version = "0.59.0", features = ["vulkan"] } # Vulkan is needed for DXVK native to work
raw-window-handle = "0.6"

[features]
default = ["fxc", "fxc_wine"]

profiling = ["dep:profiling"]
# Enables D3DCompile. Currently only supports Windows.
fxc = ["d3d11-ffi/Win32_Graphics_Direct3D_Fxc"]
# Enables D3DCompile on Linux by spawning a compiler server using d3dcompiler under Wine
fxc_wine = ["fxc"]

# dxvk_wsi_glfw = ["d3d11-ffi/dxvk_wsi_glfw"] # TODO: glfw support is currently broken?
sdl2 = ["d3d11-ffi/dxvk_wsi_sdl2", "dep:sdl2"]
sdl3 = ["d3d11-ffi/dxvk_wsi_sdl3", "dep:sdl3"]


# [[example]]
# name = "triangle"
# path = "examples/triangle.rs"
# required-features = ["glfw"]
