[package]
name = "d3d11-ffi"
version = "0.2.0"
edition = "2021"

[dependencies]
windows-core = "0.58"
windows-targets = "0.52"

[features]
default = [
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Dxgi",
    "Win32_Security",
]
Win32_Graphics_Direct3D = []
Win32_Graphics_Direct3D_Fxc = []
Win32_Graphics_Direct3D11 = []
Win32_Graphics_Dxgi_Common = []
Win32_Graphics_Dxgi = []
Win32_Graphics_Gdi = []
Win32_Security = []
